# paperpose

./: CMakeLists.txt  Main.cpp  Readme.md
src/: PaperFinder.cpp  PositionEstimator.cpp  Visualizer.cpp
src/include/: PaperFinder.h  PositionEstimator.h  Visualizer.h
